Add socket conection base

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,8 @@ set(TARGET_LIBRARY_NAME ${PROJECT_NAME})
 #
 file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/include/*.h)
 file(GLOB LIBSRC_FILES ${PROJECT_SOURCE_DIR}/libsource/*.c)
-file(GLOB MAIN_FILE ${PROJECT_SOURCE_DIR}/source/test.cpp)
+file(GLOB MAIN_FILE ${PROJECT_SOURCE_DIR}/source/main.cpp)
+message(${LIBSRC_FILES})
 
 
 #
@@ -36,19 +37,32 @@ link_directories(${TARGET_DIR}/lib)
 # Project Compilation Flags
 #
 set(PROJECT_CXXFLAGS "-DTO_EBCDIC")
-add_compile_options("-DTO_EBCDIC")
-set(CMAKE_CXX_FLAGS "-g -DTO_EBCDIC ${PROJECT_CXXFLAGS}")
+# add_compile_options("-DTO_EBCDIC")
+set(CMAKE_CXX_FLAGS "-g ${PROJECT_CXXFLAGS}")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${PROJECT_CXXFLAGS}")
 set(CMAKE_CXX_FLAGS_RELEASE "-Wno-deprecated -Wno-all")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${PROJECT_CXXFLAGS}")
 
-                       
+set(Boost_USE_STATIC_LIBS        ON)  # only find static libs
+set(Boost_USE_DEBUG_LIBS        OFF)  # ignore debug libs and
+set(Boost_USE_RELEASE_LIBS       ON)  # only find release libs
+set(Boost_USE_MULTITHREADED      ON)
+set(Boost_USE_STATIC_RUNTIME    OFF)
+find_package(Boost 1.66.0 COMPONENTS asio system)
+if(Boost_FOUND)
+    message("Found Boost.")
+    include_directories(${Boost_INCLUDE_DIRS})
+endif()              
+
 #
 # All libraries required to link executables
 #
-set(DEPENDENCY_LIBRARIES)
+set(DEPENDENCY_LIBRARIES 
+            ${Boost_LIBRARIES}
+            boost_system
+            pthread)
 
 #
 # Special commands
